--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "firebase": "^10.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
